Wrote CSS for about.html

--- a/aboutStyles.css
+++ b/aboutStyles.css
@@ -1,3 +1,4 @@
+/* Reset default margin and padding */
 * {
     margin: 0;
     padding: 0;
@@ -30,18 +31,12 @@
     margin-bottom: 10px;
   }
   
-  input[type="submit"] {
-    display: block;
-    margin: 10px auto;
-    padding: 10px;
-    width: 200px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    cursor: pointer;
+  a {
+    color: #0000EE;
+    text-decoration: none;
   }
   
-  input[type="submit"]:hover {
-    background-color: #555;
+  a:hover {
+    text-decoration: underline;
   }
   
