initial db connection

--- a/public/aboutStyles.css
+++ b/public/aboutStyles.css
@@ -26,6 +26,12 @@
     background-color: #ddd;
     color: black;
   }
+
+  .quote-box {
+    margin-top: 1em;
+    padding: 0.5em;
+    border-radius: 5px;
+  }
   
   h1 {
     text-align: center;
