--- a/public/scoresStyles.css
+++ b/public/scoresStyles.css
@@ -1,43 +1,68 @@
 /* Reset default margin and padding */
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-  }
-  
-  .menu {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    display: flex;
-  }
-  
-  .menu a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    float: right;
-  }
-  
-  .menu a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  p {
-    text-align: center;
-    margin-bottom: 10px;
-  }
-  
-  p:nth-child(even) {
-    background-color: #f5f5f5;
-  }
-  
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+
+.menu {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  display: flex;
+}
+
+.menu a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  float: right;
+}
+
+.menu a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 20px;
+}
+
+p {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+p:nth-child(even) {
+  background-color: #f5f5f5;
+}
+
+/* Styles for High Scores */
+#highScoresContainer {
+  margin: 20px auto;
+  width: 300px;
+  padding: 10px;
+}
+
+#highScoresContainer h2 {
+  margin-bottom: 10px;
+}
+
+.highScore {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.highScore .username {
+  font-weight: bold;
+}
+
+.highScore .score {
+  color: #555;
+}
+
